# OneCard

./: .gitignore  CMakeLists.txt  main.cpp
include/: main.hpp
rule/: CMakeLists.txt
rule/include/: Card.hpp  Deck.hpp  Enum.hpp  Game.hpp
rule/src/: Card.cpp  Deck.cpp
